# supervisor-win

./: .gitignore  .travis.yml  CHANGES.rst  CHANGES.txt  README.rst  pyproject.toml  setup.py  tox.ini
docs/: api.rst  configuration.rst  development.rst  installing.rst  introduction.rst  plugins.rst  running.rst  windows.rst
supervisor/: childutils.py  compat.py  confecho.py  datatypes.py  dispatchers.py  events.py  helpers.py  http.py  http_client.py  loggers.py  options.py  pidproxy.py  poller.py  process.py  rpcinterface.py  services.py  socket_manager.py  states.py  supervisorctl.py  supervisord.py  templating.py  utils.py  web.py  xmlrpc.py
supervisor/medusa/: CHANGES.txt  asynchat_25.py  asyncore_25.py  auth_handler.py  counter.py  default_handler.py  filesys.py  http_date.py  http_server.py  logger.py  producers.py  text_socket.py  util.py  xmlrpc_handler.py
supervisor/psutil/: __init__.py  subproc.py
supervisor/scripts/: loop_eventgen.py  loop_listener.py  sample_commevent.py  sample_eventlistener.py  sample_exiting_eventlistener.py
supervisor/skel/: sample.conf
supervisor/tests/: base.py  test_childutils.py  test_confecho.py  test_datatypes.py  test_dispatchers.py  test_end_to_end.py  test_events.py  test_http.py  test_http_client.py  test_loggers.py  test_options.py  test_pidproxy.py  test_poller.py  test_process.py  test_rpcinterfaces.py  test_socket_manager.py  test_states.py  test_supervisorctl.py  test_supervisord.py  test_templating.py  test_web.py  test_xmlrpc.py  trackrefs.py
supervisor/tests/fixtures/: donothing.conf  listener.py  print_env.py  spew.py  test_1231.py  unkillable_spew.py
